--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 0 15px;
+    padding: 32px 15px;
     max-width: 500px;
     margin: 0 auto;
 }
@@ -21,20 +21,12 @@ body {
     flex: 1 1 auto;
 }
 
-.footer {
-    text-align: center;
-    padding: 30px 0;
-}
-
-
 .title {
     text-align: center;
-    padding: 30px 0;
+    margin-bottom: 32px;
     font-family: sans-serif;
     letter-spacing: 1px;
 }
-
-.main {}
 
 .form,
 .item {
@@ -43,6 +35,7 @@ body {
     box-shadow: 0 4px 16px #ccc;
     font-family: sans-serif;
     letter-spacing: 1px;
+    margin-bottom: 15px;
 }
 
 .form__input,
@@ -92,8 +85,8 @@ body {
     transition: 0.3s;
 }
 
-.form__button:focus,
-.form__button:hover {
+.button:focus,
+.button:hover {
     background-color: #444;
 }
 
@@ -110,7 +103,6 @@ body {
 }
 
 .item {
-    margin-bottom: 15px;
     list-style: none;
     display: flex;
     align-items: center;
